apps/registry/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    nginx.org/client-max-body-size: "0"
    nginx.org/proxy-buffering: "False"
    nginx.org/proxy-connect-timeout: "600"
    nginx.org/proxy-read-timeout: "600"
    nginx.org/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: registry.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
